dataset1235/2025-2/2868285114/users/3240599857/executions/3071719669_2510511830.log
== SUBMISSION (2025-08-28 22:55:00)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
quantidadedeminutos + valorpago * 0.97
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:57:23)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal + valorpago * 0.4
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.4
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.4
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.4
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.4
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.4
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.4
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:53:56)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal + valorpago * 0.97
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:56:25)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal + valorpago * 42
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:53:57)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal + valorpago * 0.97
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:57:41)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal = valorpago * 0.4
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
---- user output:
56.8
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
---- user output:
54.99
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
---- user output:
21.91
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
---- user output:
68.19
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
---- user output:
125.96
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
---- user output:
50.62
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:53:54)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal + valorpago * 0.97
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:57:22)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal + valorpago * 0.4
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.4
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.4
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.4
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.4
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.4
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.4
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:55:01)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
quantidadedeminutos + valorpago * 0.97
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:51:38)
-- CODE: 
aguaconsumida = float(input())
valorpago = (0.97 * aguaconsumida)
percentualtotal + valorpago * 0.97
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:57:46)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal = valorpago * 0.42
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
---- user output:
59.64
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
---- user output:
57.74
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
---- user output:
23.0
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
---- user output:
71.6
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
---- user output:
132.26
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
---- user output:
53.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:57:39)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal = valorpago * 0.4
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
---- user output:
56.8
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
---- user output:
54.99
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
---- user output:
21.91
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
---- user output:
68.19
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
---- user output:
125.96
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
---- user output:
50.62
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:55:22)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
quantidadedeminutostotal + valorpago * 0.97
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidadedeminutostotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'quantidadedeminutostotal' is not defined. Did you mean: 'quantidadedeminutos'?
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidadedeminutostotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'quantidadedeminutostotal' is not defined. Did you mean: 'quantidadedeminutos'?
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidadedeminutostotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'quantidadedeminutostotal' is not defined. Did you mean: 'quantidadedeminutos'?
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidadedeminutostotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'quantidadedeminutostotal' is not defined. Did you mean: 'quantidadedeminutos'?
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidadedeminutostotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'quantidadedeminutostotal' is not defined. Did you mean: 'quantidadedeminutos'?
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidadedeminutostotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'quantidadedeminutostotal' is not defined. Did you mean: 'quantidadedeminutos'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:55:21)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
quantidadedeminutostotal + valorpago * 0.97
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidadedeminutostotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'quantidadedeminutostotal' is not defined. Did you mean: 'quantidadedeminutos'?
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidadedeminutostotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'quantidadedeminutostotal' is not defined. Did you mean: 'quantidadedeminutos'?
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidadedeminutostotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'quantidadedeminutostotal' is not defined. Did you mean: 'quantidadedeminutos'?
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidadedeminutostotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'quantidadedeminutostotal' is not defined. Did you mean: 'quantidadedeminutos'?
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidadedeminutostotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'quantidadedeminutostotal' is not defined. Did you mean: 'quantidadedeminutos'?
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidadedeminutostotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'quantidadedeminutostotal' is not defined. Did you mean: 'quantidadedeminutos'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:58:01)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal = valorpago * 42
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
---- user output:
5964.0
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
---- user output:
5773.74
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
---- user output:
2300.25
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
---- user output:
7159.72
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
---- user output:
13225.9
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
---- user output:
5314.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:53:56)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal + valorpago * 0.97
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:55:01)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
quantidadedeminutos + valorpago * 0.97
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(percentualtotal,2))
                ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:56:25)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal + valorpago * 42
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:58:02)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal = valorpago * 42
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
---- user output:
5964.0
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
---- user output:
5773.74
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
---- user output:
2300.25
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
---- user output:
7159.72
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
---- user output:
13225.9
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
---- user output:
5314.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:59:38)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal = valorpago * 1.42
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
---- user output:
201.64
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
---- user output:
195.21
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
---- user output:
77.77
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
---- user output:
242.07
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
---- user output:
447.16
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
---- user output:
179.68
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:52:24)
-- CODE: 
aguaconsumida = float(input())
valorpago = (0.97 * aguaconsumida) + 45
percentualtotal + valorpago * 0.97
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:52:25)
-- CODE: 
aguaconsumida = float(input())
valorpago = (0.97 * aguaconsumida) + 45
percentualtotal + valorpago * 0.97
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 0.97
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:59:02)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal = valorpago * 
print(round(percentualtotal,2))))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
File "XXXX", line 4
    print(round(percentualtotal,2))))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
File "XXXX", line 4
    print(round(percentualtotal,2))))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
File "XXXX", line 4
    print(round(percentualtotal,2))))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
File "XXXX", line 4
    print(round(percentualtotal,2))))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
File "XXXX", line 4
    print(round(percentualtotal,2))))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
File "XXXX", line 4
    print(round(percentualtotal,2))))
                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:56:26)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal + valorpago * 42
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:56:24)
-- CODE: 
quantidadedeminutos = float(input())
valorpago = (0.97 * quantidadedeminutos) + 45
percentualtotal + valorpago * 42
print(round(percentualtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
201.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 2:
---- input:
95.33
---- correct output:
195.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 3:
---- input:
10.07
---- correct output:
77.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 4:
---- input:
129.35
---- correct output:
242.07
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 5:
---- input:
278.25
---- correct output:
447.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
-- TEST CASE 6:
---- input:
84.06
---- correct output:
179.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    percentualtotal + valorpago * 42
    ^^^^^^^^^^^^^^^
NameError: name 'percentualtotal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
